debug/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyAll
metadata:
  name: deny-all-namespaces
spec:
  match:
    kinds:
    - apiGroups:
      - apps
      - batch
      - ""
      kinds:
      - DaemonSet
      - Deployment
      - StatefulSet
      - Pod
      - CronJob
      - Job
