debug/template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenyall
spec:
  crd:
    spec:
      names:
        kind: K8sDenyAll
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyall

        violation[{"msg": msg}] {
          # msg := sprintf("REVIEW OBJECT: %v", [input.review])
          msg := sprintf("INVENTORY OBJECT: %v", [data.inventory])
        }
